Float boxes successful

--- a/index.html
+++ b/index.html
@@ -4,7 +4,40 @@
 	<link rel="stylesheet" href="styles/output.css">
 </head>
 <body>
-<h1>Psychic Octo Bear</h1>
+<!--
+<nav>
+	<ul>
+		<li>&lt;(^_^)&gt;</li>
+		<li>lmao</li>
+		<li>rofl</li>
+		<li>omg</li>
+		<li>xD</li>
+	</ul>
+</nav>
+-->
 
+<h1>Psychic Octo Bear</h1>
+<p>This is a place to go, when you have no idea how to start.</p>
+
+<div class="row">
+	<div class="col-left">
+		<div class="story">
+		<p>There is a lot of technology in the world. What are you interested in? What will be your niche? Or if you are like me, maybe you want a taste of a little bit of everything.</p>
+	</div>
+	</div>
+
+	<div class="col-right">
+		<div class="resources">
+		<ul>
+			<li>Computer Science</li>
+			<li>Web Development</li>
+			<li>Mobile Development</li>
+			<li>Maker</li>
+			<li>DJing</li>
+		</ul>
+		</div>
+	</div>
+
+</div>
 </body>
 </html>
