--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
 <div class="row">
 	<div class="col-left">
 		<div class="story">
+		<h2>Where do I start?</h2>
 		<p>There is a lot of technology in the world. What are you interested in? What will be your niche? Or if you are like me, maybe you want a taste of a little bit of everything.</p>
-	</div>
-	</div>
 
+		<p><a href="http://www.jylcreations.com/posts/learning-to-code-the-roadmap-i-wish-i-had-been-given">Learning to Code: The Roadmap I Wish I Had Been Given</a></p>
+		</div>
+	</div>
 	<div class="col-right">
 		<div class="resources">
 		<ul>
@@ -37,7 +39,27 @@
 		</ul>
 		</div>
 	</div>
-
 </div>
+
+
+<!-- Web Development -->
+<div class="row">
+	<div class="col-left">
+		<div class="story">
+		<h2>Young Padawan</h2>
+		<p>There is a lot of technology in the world. What are you interested in? What will be your niche? Or if you are like me, maybe you want a taste of a little bit of everything.</p>
+		</div>
+	</div>
+	<div class="col-right">
+		<div class="resources">
+		<ul>
+			<li>VIM Adventures</li>
+			<li>Try Git</li>
+			<li>Unix/Linux Commands</li>
+		</ul>
+		</div>
+	</div>
+</div>
+
 </body>
 </html>
