Update content and styles

--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
 		<div class="story">
 		<h2>Where do I start?</h2>
 		<p>There is a lot of technology in the world. What are you interested in? What will be your niche? Or if you are like me, maybe you want a taste of a little bit of everything.</p>
-
-		<p><a href="http://www.jylcreations.com/posts/learning-to-code-the-roadmap-i-wish-i-had-been-given">Learning to Code: The Roadmap I Wish I Had Been Given</a></p>
 		</div>
 	</div>
 	<div class="col-right">
@@ -36,6 +34,8 @@
 			<li>Mobile Development</li>
 			<li>Maker</li>
 			<li>DJing</li>
+			<li><a href="https://github.com/vhf/free-programming-books/blob/master/free-programming-books.md">Free Programming Books</a></li>
+			<li><a href="http://www.jylcreations.com/posts/learning-to-code-the-roadmap-i-wish-i-had-been-given">Learning to Code: The Roadmap I Wish I Had Been Given</a></li>
 		</ul>
 		</div>
 	</div>
@@ -46,16 +46,35 @@
 <div class="row">
 	<div class="col-left">
 		<div class="story">
-		<h2>Young Padawan</h2>
-		<p>There is a lot of technology in the world. What are you interested in? What will be your niche? Or if you are like me, maybe you want a taste of a little bit of everything.</p>
+		<h2>Editors</h2>
+		<p>If you're going to do any coding, having a good editor is important. Each editor can be used for different purposes. What will you explore?</p>
 		</div>
 	</div>
 	<div class="col-right">
 		<div class="resources">
 		<ul>
-			<li>VIM Adventures</li>
-			<li>Try Git</li>
+			<li><a href="http://www.sublimetext.com/">Sublime Text 2</a></li>
+			<li><a href="http://notepad-plus-plus.org/">Notepad++</a></li>
+			<li><a href="http://vim-adventures.com/">VIM Adventures</a></li>
 			<li>Unix/Linux Commands</li>
+		</ul>
+		</div>
+	</div>
+</div>
+
+<!-- Entrepreneur -->
+<div class="row">
+	<div class="col-left">
+		<div class="story">
+		<h2>Entrepreneurs</h2>
+		<p>Those who see the world in crisis everyday.</p>
+		</div>
+	</div>
+	<div class="col-right">
+		<div class="resources">
+		<ul>
+			<li><a href="http://dcurt.is/startups-ruin-you">Learning how to think</a></li>
+			<li><a href="https://www.khanacademy.org/economics-finance-domain/entrepreneurship2/interviews-entrepreneurs/elon-musk/v/elon-musk">Salman Khan (Khan Academy) Interviews Elon Musk - CEO of Tesla Motors and SpaceX</a></li>
 		</ul>
 		</div>
 	</div>
