Add web dev section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,23 @@
 <div class="row">
 	<div class="col-left">
 		<div class="story">
+		<h2>Web Development</h2>
+		<p>The Internet.</p>
+		</div>
+	</div>
+	<div class="col-right">
+		<div class="resources">
+		<ul>
+			<li><a href="http://www.20thingsilearned.com/">20 Things I Learned</a></li>
+		</ul>
+		</div>
+	</div>
+</div>
+
+<!-- Text editing -->
+<div class="row">
+	<div class="col-left">
+		<div class="story">
 		<h2>Editors</h2>
 		<p>If you're going to do any coding, having a good editor is important. Each editor can be used for different purposes. What will you explore?</p>
 		</div>
