Add Git beginners link

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 		<div class="resources">
 		<ul>
 			<li><a href="http://www.20thingsilearned.com/">20 Things I Learned</a></li>
+			<li><a href="http://stackoverflow.com/questions/315911/git-for-beginners-the-definitive-practical-guide">Git for Beginners</a></li>
 		</ul>
 		</div>
 	</div>
