--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 		<ul>
 			<li><a href="http://www.20thingsilearned.com/">20 Things I Learned</a></li>
 			<li><a href="http://stackoverflow.com/questions/315911/git-for-beginners-the-definitive-practical-guide">Git for Beginners</a></li>
+			<li><a href="https://www.youtube.com/watch?v=PUv66718DII">Bret Victor - Inventing on Principle</a></li>
 		</ul>
 		</div>
 	</div>
